Follow up to Bug 456326 - "ASSERTION: Some other operation is in progress" when synchronizing mails. r=bienvenu,sr=dmose,a=dmose over irc.