mailnews/imap/src/nsAutoSyncManager.h
@@ -98,7 +98,10 @@ class nsAutoSyncManager : public nsIObserver,
   static const PRUint32 kDefaultUpdateInterval = 10UL;                  // 10min
   static const PRInt32 kTimerIntervalInMs = 400;
   static const PRUint32 kNumberOfHeadersToProcess = 250U;
+  // recommended size of each group of messages per download
   static const PRUint32 kDefaultGroupSize = 50U*1024U /* 50K */;
+  // enforced size of the first group that will be downloaded before idle time
+  static const PRUint32 kFirstGroupSizeLimit = 60U*1024U /* 60K */; 
   static const PRInt32 kIdleTimeInSec = 10;
   static const PRUint32 kGroupRetryCount = 3;
   
@@ -120,7 +123,7 @@ class nsAutoSyncManager : public nsIObserver,
     IdleState GetIdleState() const;
     nsresult AutoUpdateFolders(); 
     void ScheduleFolderForOfflineDownload(nsIAutoSyncState *aAutoSyncStateObj);
-    nsresult DownloadMessagesForOffline(nsIAutoSyncState *aAutoSyncStateObj);
+    nsresult DownloadMessagesForOffline(nsIAutoSyncState *aAutoSyncStateObj, PRUint32 aSizeLimit = 0);
     nsresult HandleDownloadErrorFor(nsIAutoSyncState *aAutoSyncStateObj);
     
     // Helper methods for priority Q operations
